GVW-86 add program create name requrement

--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -397,6 +397,7 @@
       "deposit-details": "Deposit details",
       "fields": {
         "name": "Name",
+        "name-requirements": "Requirement from 4 to 20 symbols",
         "account-type": "Account type",
         "currency": "Currency",
         "description": "Description",
@@ -413,6 +414,7 @@
       "validation": {
         "title-required": "Title is required",
         "title-is-long": "Title is too long",
+        "title-is-short": "Title is too short",
         "description-is-long": "Description is too long",
         "description-is-short": "Description is too short",
         "description-required": "Description is required",
