--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -452,11 +452,40 @@
       "tooltip": "My profit is the total profit earned by all programs."
     }
   },
-  "program-deposit": {
-    "header": "Deposit",
-    "available-gvt": "Available GVT",
-    "enter-gvt-amount": "Enter GVT amount",
-    "amount-in": "Amount in"
+  "deposit-program": {
+    "title": "Invest",
+    "gv-commission": "GV commission",
+    "available-to-invest-in-program": "Available to invest in program",
+    "available-to-invest-in-fund": "Available to invest in fund",
+    "available-in-wallet": "Available in wallet",
+    "amount": "Amount to invest",
+    "entry-fee": "Entry fee",
+    "investment-amount": "Investment amount",
+    "disclaimer": "After clicking the \"Confirm\" button, the invested GVT will be immediately converted to {{currency}}. Accrual of {{currency}} to the account manager will only occur at the end of the reporting period.",
+    "confirm": "Confirm",
+    "success-alert-message": "Successful request for investment in the program.",
+    "validation": {
+      "amount-more-than-available": "Amount is more than available in your wallet",
+      "amount-is-required": "Amount is required.",
+      "amount-min-value": "Min amount is {{min}} GVT"
+    }
+  },
+  "deposit-fund": {
+    "title": "Invest",
+    "gv-commission": "GV commission",
+    "available-to-invest-in-fund": "Available to invest in fund",
+    "available-in-wallet": "Available in wallet",
+    "amount": "Amount to invest",
+    "entry-fee": "Entry fee",
+    "investment-amount": "Investment amount",
+    "disclaimer": "After clicking the \"Confirm\" button, the invested GVT will be immediately converted to {{currency}}. Accrual of {{currency}} to the account manager will only occur at the end of the reporting period.",
+    "confirm": "Confirm",
+    "success-alert-message": "Successful request for investment in the program.",
+    "validation": {
+      "amount-more-than-available": "Amount is more than available in your wallet",
+      "amount-is-required": "Amount is required.",
+      "amount-min-value": "Min amount is {{min}} GVT"
+    }
   },
   "program-withdraw": {
     "header": "Withdraw",
