GVW-85 Bug fuxing / add verification status

--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -7,6 +7,12 @@
     "text": "Day left",
     "text_plural": "Days left"
   },
+  "verification-status": {
+    "verified": "Verified",
+    "not-verified": "Not verified",
+    "under-review": "Under Review",
+    "rejected": "Rejected"
+  },
   "program-period": {
     "day": "day",
     "day_plural": "days",
