--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -411,6 +411,14 @@
         "deposit-amount": "Deposit amount",
         "available-in-wallet": "Available in wallet"
       },
+      "hints": {
+        "success-fee": "Description about success fee is here",
+        "success-fee-description":
+          "A success fee is paid to a manager at the end of the reporting period for successfully closing the period at a profit.",
+        "entry-fee": "Description about entry fee is here",
+        "entry-fee-description":
+          "An entry fee is a fee charged to investors upon their investment to an investment program or a GV Fund."
+      },
       "validation": {
         "title-required": "Title is required",
         "title-is-long": "Title is too long",
