--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -307,7 +307,10 @@
       "email-field-text": "Email address",
       "password-field-text": "Password",
       "password-confirm-field-text": "Confirm password",
-      "email-confirm-title": "Confirm your Email"
+      "email-confirm-title": "Confirm your Email",
+      "i-accept-text": "I accept the",
+      "accept-terms-text": "Terms of Service",
+      "privacy-policy-text": "Privacy Policy"
     },
     "signup-email-pending": {
       "text-section":
