--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -62,7 +62,9 @@
       "successFee": "Success fee",
       "invest": "Invest",
       "reinvest": "Reinvest",
-      "yourInvestment": "Your investment",
+      "yourInvestment": "Current period investment",
+      "pending-input": "Pending input",
+      "pending-output": "Pending output",
       "invested": "Invested",
       "value": "Value",
       "profit": "Profit",
