--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -230,6 +230,9 @@
     "left": "left"
   },
   "program-actions": {
+    "remove-from-favorites": "Remove from favorites",
+    "add-to-favorites": "Add to favorites",
+    "details": "Details",
     "invest": "Invest",
     "withdraw": "Withdraw",
     "create-program": "Create Program",
