Correct localize to withdraw alert

--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -557,6 +557,7 @@
     "payout-date": "Payout date",
     "back": "Back",
     "submit": "Submit",
+    "success-alert-message": "Request to withdrawal sent successfully.",
     "validation": {
       "amount-more-than-available":
         "Amount is more than available for withdraw",
