GVW-86 add coming-soon text to broker-card

--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -407,6 +407,9 @@
       "select-broker": "Select broker",
       "settings": "Settings"
     },
+    "broker-card": {
+      "coming-soon": "Coming soon"
+    },
     "broker-info": {
       "about": "About",
       "terms": "Terms",
