--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -966,10 +966,12 @@
     "select-currency": "Select a wallet currency",
     "will-send": "You will send",
     "will-get": "You'll get",
+    "will-get-gvt": "You will get",
     "deposit-address": "Deposit address",
     "copy-to-clipboard-success":
       "Your wallet-pane number was copied to the clipboard successfully.",
-    "copy-to-clipboard-error": "Failed to copy data to the clipboard."
+    "copy-to-clipboard-error": "Failed to copy data to the clipboard.",
+    "disclaimer": "After processing the {{currency}} transaction, your transferred funds will be converted to GVT, according to the current market price. The exact amount of GVT received will be determined at the time of conversion in the market."
   },
   "wallet": {
     "title": "Wallet",
