--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -965,7 +965,7 @@
     "title": "Add funds",
     "select-currency": "Select a wallet currency",
     "will-send": "You will send",
-    "will-get": "You'll get",
+    "will-get": "Approximate amount",
     "will-get-gvt": "You will get",
     "deposit-address": "Deposit address",
     "copy-to-clipboard-success":
