--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -1003,16 +1003,26 @@
     "withdraw": "Withdraw",
     "transactions": {
       "date": "Date",
-      "type": "Type",
-      "amount": "Amount"
+      "information": "Information",
+      "status": "Status",
+      "amount": "Amount",
+      "actions": "Actions"
     },
-    "transactions-types": {
-      "wallet": "Wallet",
-      "program": "Program",
-      "fund": "Fund",
-      "program-request": "Program request",
-      "withdrawal-request": "Withdrawal request",
-      "payment-transaction": "Payment transaction"
+    "transaction-actions": {
+      "resend-email": "Resend confirmation email",
+      "cancel-request": "Cancel request"
+    },
+    "transaction-statuses": {
+      "Done": "Completed",
+      "InProcess": "Processing",
+      "New": "New",
+      "Error": "Error",
+      "Rejected": "Rejected",
+      "Cancelled": "Cancelled"
+    },
+    "alert-messages": {
+      "resend-email-success": "A withdrawal confirmation letter has just been resent to your email address.",
+      "cancel-request-success": "The withdrawal request was successfully canceled"
     }
   },
   "wallet-withdraw": {
