--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -38,7 +38,7 @@
     },
     "funds-header": {
       "title": "Name",
-      "balance": "Balance",
+      "balance": "Size",
       "assets": "Assets",
       "investors": "Investors",
       "drawdown": "D.down",
