Added localize to wallet

--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -996,6 +996,8 @@
     "add-funds": "Add funds",
     "withdraw": "Withdraw",
     "transactions": {
+      "title": "Transactions",
+      "empty-transactions":"There are no transactions",
       "date": "Date",
       "information": "Information",
       "status": "Status",
