--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -754,7 +754,8 @@
           "day_plural": "Days"
         },
         "upload-logo": "Upload program logo",
-        "upload-logo-rules": "At least 300 x 300px PNG or JPG file",
+        "upload-logo-rules":
+          "At least 300 x 300px PNG or JPG file. The maximum file size is 2MB.",
         "entry-fee": "Entry fee",
         "success-fee": "Success fee",
         "deposit-amount": "Deposit amount",
@@ -782,7 +783,9 @@
         "entry-fee-required": "Entry fee is required",
         "success-fee-required": "Success fee is required",
         "account-type-required": "Account type is required",
-        "image-size-incorrect": "Incorrect size of the uploaded image"
+        "image-resolution-incorrect":
+          "The resolution of the uploaded image is too low.",
+        "image-file-is-large": "The uploaded image file is too large."
       }
     },
     "notifications": {
@@ -823,7 +826,8 @@
         "brokers-leverage": "Broker's leverage",
         "period": "Period",
         "upload-logo": "Upload fund logo",
-        "upload-logo-rules": "At least 300 x 300px PNG or JPG file",
+        "upload-logo-rules":
+          "At least 300 x 300px PNG or JPG file. The maximum file size is 2MB.",
         "entry-fee": "Entry fee",
         "success-fee": "Success fee",
         "exit-fee": "Exit fee",
@@ -839,7 +843,10 @@
         "entry-fee-required": "Entry fee is required",
         "success-fee-required": "Success fee is required",
         "assets-share": "Total share of all assets should be equal to 100%",
-        "assets-count": "Must be at least two assets."
+        "assets-count": "Must be at least two assets.",
+        "image-resolution-incorrect":
+          "The resolution of the uploaded image is too low.",
+        "image-file-is-large": "The uploaded image file is too large."
       }
     }
   },
@@ -890,12 +897,18 @@
     "settings": {
       "title": "Settings",
       "profile-image": "Profile image",
-      "image-requirements": "At least 300 x 300px PNG or JPG file.",
+      "image-requirements":
+        "At least 300 x 300px PNG or JPG file. The maximum file size is 2MB.",
       "save-photo": "Save photo",
       "image-success-save-message":
         "The photo has just been successfully changed.",
       "logout-from-another-devices": "Logout from another devices",
-      "change-password": "Change password"
+      "change-password": "Change password",
+      "validation": {
+        "image-resolution-incorrect":
+          "The resolution of the uploaded image is too low.",
+        "image-file-is-large": "The uploaded image file is too large."
+      }
     }
   },
   "profile-widget": {
@@ -998,7 +1011,7 @@
     "withdraw": "Withdraw",
     "transactions": {
       "title": "Transactions",
-      "empty-transactions":"There are no transactions",
+      "empty-transactions": "There are no transactions",
       "date": "Date",
       "information": "Information",
       "status": "Status",
