Fixed Portfolio Events table

--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -439,7 +439,7 @@
         "date": "Date",
         "type": "Type",
         "description": "Description",
-        "amount": "Amount, GVT"
+        "amount": "Amount"
       },
       "types": {
         "all": "All",
@@ -449,7 +449,11 @@
         "loss": "Loss",
         "reinvest": "Reinvest",
         "canceled": "Canceled",
-        "ended": "Ended"
+        "ended": "Ended",
+        "ManagerInvest":"Manager invest",
+        "EntranceFee": "Entrance fee",
+        "AssetStarted": "Asset started",
+        "InvestorInvest": "Investor invest"
       }
     }
   },
