Revert disabled navigation

--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -909,7 +909,7 @@
       "save-photo": "Save photo",
       "image-success-save-message":
         "The photo has just been successfully changed.",
-      "logout-from-another-devices": "Logout from another devices",
+      "logout-from-another-devices": "Logout from other devices",
       "change-password": "Change password"
     }
   },
