--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -176,6 +176,13 @@
     "history": {
       "heading": "History",
       "subheading": "Rebalancing",
+      "structure": {
+        "title": "Structure",
+        "asset": "Asset",
+        "symbol": "Symbol",
+        "target": "Target",
+        "current": "Current"
+      },
       "rebalances": {
         "assets": "Assets",
         "from": "From",
