--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -785,10 +785,10 @@
       "hints": {
         "success-fee": "Description about success fee is here",
         "success-fee-description":
-          "A success fee is paid to a manager at the end of the reporting period for successfully closing the period at a profit.",
+          "A success fee is paid to a manager at the end of the reporting period for successfully closing the period at a profit. The maximum success fee is ",
         "entry-fee": "Description about entry fee is here",
         "entry-fee-description":
-          "An entry fee is a fee charged to investors upon their investment to an investment program or a GV Fund."
+          "An entry fee is a fee charged to investors upon their investment to an investment program or a GV Fund. The maximum entry fee is "
       },
       "validation": {
         "title-required": "Title is required",
