--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -71,7 +71,12 @@
       "status": "Status",
       "withdraw": "Withdraw",
       "withdraw-notice-text":
-        "You can withdraw only the invested funds, the profit will be withdrawn to your account at the end of the period automatically"
+        "You can withdraw only the invested funds, the profit will be withdrawn to your account at the end of the period automatically",
+      "close-program": "Close Program",
+      "close-program-notification":
+        "Investment program will be closed after this reporting period. Current investment requests will be cancelled and new requests won’t be accepted. Profit and funds from the trading account will be deposited to GVT wallets of investors and manager according to their shares.",
+      "close-program-notification-success":
+        "Request to close the program was sent successfully."
     },
     "statistics": {
       "heading": "Statistics",
