--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -788,7 +788,7 @@
           "A success fee is paid to a manager at the end of the reporting period for successfully closing the period at a profit. The maximum success fee is ",
         "entry-fee": "Description about entry fee is here",
         "entry-fee-description":
-          "An entry fee is a fee charged to investors upon their investment to an investment program or a GV Fund. The maximum entry fee is "
+          "An entry fee is a fee charged to investors upon their investment to an investment program. The maximum entry fee is "
       },
       "validation": {
         "title-required": "Title is required",
@@ -862,13 +862,21 @@
         "description-is-short": "Description is too short",
         "description-required": "Description is required",
         "entry-fee-required": "Entry fee is required",
-        "success-fee-required": "Success fee is required",
+        "exit-fee-required": "Exit fee is required",
         "assets-share": "Total share of all assets should be equal to 100%",
         "assets-count": "Must be at least two assets.",
         "image-resolution-incorrect":
           "The resolution of the uploaded image is too low.",
         "image-file-is-large": "The uploaded image file is too large.",
         "deposit-min": "Not enought money."
+      },
+      "hints": {
+        "exit-fee": "Description about exit fee is here",
+        "exit-fee-description":
+          "An exit fee is a fee charged to investors when they redeem shares from a GV Fund. The maximum exit fee is ",
+        "entry-fee": "Description about entry fee is here",
+        "entry-fee-description":
+          "An entry fee is a fee charged to investors upon their investment to a GV Fund. The maximum entry fee is "
       }
     }
   },
