--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -788,12 +788,12 @@
         "available-in-wallet": "Available in wallet"
       },
       "hints": {
-        "success-fee": "Description about success fee is here",
-        "success-fee-description":
-          "A success fee is paid to a manager at the end of the reporting period for successfully closing the period at a profit. The maximum success fee is ",
         "entry-fee": "Description about entry fee is here",
         "entry-fee-description":
-          "An entry fee is a fee charged to investors upon their investment to an investment program. The maximum entry fee is "
+          "An entry fee is a fee charged to investors upon their investment to an investment program. The maximum entry fee is {{maxFee}} %",
+        "success-fee": "Description about success fee is here",
+        "success-fee-description":
+          "A success fee is paid to a manager at the end of the reporting period for successfully closing the period at a profit. The maximum success fee is {{maxFee}} %"
       },
       "validation": {
         "title-required": "Title is required",
@@ -876,12 +876,12 @@
         "deposit-min": "Not enought money."
       },
       "hints": {
-        "exit-fee": "Description about exit fee is here",
-        "exit-fee-description":
-          "An exit fee is a fee charged to investors when they redeem shares from a GV Fund. The maximum exit fee is ",
         "entry-fee": "Description about entry fee is here",
         "entry-fee-description":
-          "An entry fee is a fee charged to investors upon their investment to a GV Fund. The maximum entry fee is "
+          "An entry fee is a fee charged to investors upon their investment to a GV Fund. The maximum entry fee is {{maxFee}} %",
+        "exit-fee": "Description about exit fee is here",
+        "exit-fee-description":
+          "An exit fee is a fee charged to investors when they redeem shares from a GV Fund. The maximum exit fee is {{maxFee}} %"
       }
     }
   },
