GVW-85 add chart loader

--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -880,6 +880,9 @@
   "password-page": {
     "title": "Change password"
   },
+  "chart": {
+    "title": "Chart"
+  },
   "password-change": {
     "current-password": "Current password",
     "password": "Password",
