--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -790,10 +790,10 @@
       "hints": {
         "entry-fee": "Description about entry fee is here",
         "entry-fee-description":
-          "An entry fee is a fee charged to investors upon their investment to an investment program. The maximum entry fee is {{maxFee}} %",
+          "An entry fee is a fee charged to investors upon their investment to an investment program.",
         "success-fee": "Description about success fee is here",
         "success-fee-description":
-          "A success fee is paid to a manager at the end of the reporting period for successfully closing the period at a profit. The maximum success fee is {{maxFee}} %"
+          "A success fee is paid to a manager at the end of the reporting period for successfully closing the period at a profit."
       },
       "validation": {
         "title-required": "Title is required",
@@ -807,7 +807,9 @@
         "period-required": "Period is required",
         "leverage-required": "Leverage is required",
         "entry-fee-required": "Entry fee is required",
+        "entry-fee-max": "The maximum entry fee is {{maxFee}} %",
         "success-fee-required": "Success fee is required",
+        "success-fee-max": "The maximum success fee is {{maxFee}} %",
         "account-type-required": "Account type is required",
         "image-resolution-incorrect":
           "The resolution of the uploaded image is too low.",
@@ -867,7 +869,9 @@
         "description-is-short": "Description is too short",
         "description-required": "Description is required",
         "entry-fee-required": "Entry fee is required",
+        "entry-fee-max": "The maximum entry fee is {{maxFee}} %",
         "exit-fee-required": "Exit fee is required",
+        "exit-fee-max": "The maximum exit fee is {{maxFee}} %",
         "assets-share": "Total share of all assets should be equal to 100%",
         "assets-count": "Must be at least two assets.",
         "image-resolution-incorrect":
@@ -878,10 +882,10 @@
       "hints": {
         "entry-fee": "Description about entry fee is here",
         "entry-fee-description":
-          "An entry fee is a fee charged to investors upon their investment to a GV Fund. The maximum entry fee is {{maxFee}} %",
+          "An entry fee is a fee charged to investors upon their investment to a GV Fund.",
         "exit-fee": "Description about exit fee is here",
         "exit-fee-description":
-          "An exit fee is a fee charged to investors when they redeem shares from a GV Fund. The maximum exit fee is {{maxFee}} %"
+          "An exit fee is a fee charged to investors when they redeem shares from a GV Fund."
       }
     }
   },
