Fix edit program localization

--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -827,7 +827,7 @@
     }
   },
   "edit-program": {
-    "title": "Edit fund",
+    "title": "Edit program",
     "navigation-back-text":
       "All data will be deleted. Do you want to continue?",
     "confirm": "Confirm",
