input-image use everywhere

--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -1310,5 +1310,13 @@
         }
       }
     }
+  },
+  "fields": {
+    "input-photo": {
+      "text-download--big":
+        "Drag the image here or click here to browse your files",
+      "text-download--small": "Tap to upload the image",
+      "drop-files": "Drop files..."
+    }
   }
 }
