--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -548,8 +548,7 @@
     "disclaimer":
       "After clicking the \"Confirm\" button, the invested GVT will be immediately converted to {{currency}}. Accrual of {{currency}} to the account manager will only occur at the end of the reporting period.",
     "confirm": "Confirm",
-    "success-alert-message":
-      "Successful request for investment in the program.",
+    "success-alert-message": "Successful request for investment in the fund.",
     "validation": {
       "amount-more-than-available":
         "Amount is more than available in your wallet",
